language/move-lang/tests/move_check/typing/constraints_not_satisfied_lvalues_decl_type.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/constraints_not_satisfied_lvalues_decl_type.move:6:16
  │
2 │     struct CupC<T: copy> { f: T }
  │                    ---- 'copy' constraint declared here
3 │     struct R {}
  │            - To satisfy the constraint, the 'copy' ability would need to be added here
  ·
6 │         let x: CupC<R>;
  │                ^^^^^^^
  │                │    │
  │                │    The type '0x8675309::M::R' does not have the ability 'copy'
  │                'copy' constraint not satisifed

